# lucky-insight

./: .env.example  .pre-commit-config.yaml  404.html  CLAUDE.md  PRD.md  README.md  __next.__PAGE__.txt  __next._head.txt  __next._index.txt  __next._tree.txt  alembic.ini  docker-compose.yml  index.html  index.txt  pyproject.toml  requirements.txt  sample_import.csv
backend/: .env.example  .gitignore  Dockerfile  README.md  import_lao_lottery.py  lao_raw.txt  pyproject.toml  requirements.txt  seed_lotteries.py
backend/alembic/: env.py
backend/alembic/versions/: 00bb85eb4919_create_number_tables.py  2463c7135ec1_create_lottery_tables.py  2b12fe64d68f_create_password_reset_token.py  e20483f6d35d_create_analysis_tables.py
backend/app/: main.py
backend/app/api/: health.py
backend/app/core/: config.py  database.py  email.py  logging.py
backend/app/models/: __init__.py  analysis_job.py  analysis_result.py  base.py  lottery_game.py  lottery_result.py  mixins.py  number_category.py  number_record.py  number_source.py  number_tag.py  password_reset_token.py  record_tag.py  user.py
backend/app/repositories/: analysis_repository.py  base_repository.py  exceptions.py  lookup_repository.py  lottery_game_repository.py  lottery_result_repository.py  number_record_repository.py  number_tag_repository.py  user_repository.py
backend/app/schemas/: analysis.py  auth.py  dashboard.py  import_export.py  lottery.py  password_reset.py  record.py  user.py
backend/app/security/: exceptions.py  (+3 more)
backend/tests/: test_lottery_models.py  test_number_models.py  test_user_model.py
(+155 files in other folders)
