[project]
name = "lucky-insight-backend"
version = "1.0.0"
description = "Lucky Insight FastAPI backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "psycopg[binary]==3.2.3",
    "python-dotenv==1.0.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "argon2-cffi==23.1.0",
    "python-jose[cryptography]==3.3.0",
    "email-validator==2.2.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "httpx==0.28.1",
    "ruff==0.8.4",
    "black==24.10.0",
    "mypy==1.14.0",
    "types-python-jose==3.5.0.20260408",
]

[tool.uv]
package = false

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = ["pgsql", "pg_data"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# FastAPI's dependency-injection idiom requires calling Depends() in
# argument defaults; this is intentional, not the mutable-default-argument
# bug B008 is designed to catch.
"app/api/**" = ["B008"]

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["pgsql", "pg_data"]

